Fixed the persp fixer. Edited the cropper library to fix some bugs and remove filters. Because of this, the library is now included statically.

--- a/src/css/norm_map_generator.css
+++ b/src/css/norm_map_generator.css
@@ -11,7 +11,7 @@
   display:none;
 }
 
-canvas{
+#normal-canvas{
   margin-right: auto;
   margin-left: auto;
   display: inline-block;
